# mcp-ssh-server

./: .gitignore  LICENSE  README.md  hosts.example.json  pyproject.toml  server.json
src/mcp_ssh/: __init__.py  __main__.py  config.py  server.py  ssh_client.py
